--- a/FrameProject/ReadMe
+++ b/FrameProject/ReadMe
@@ -7,9 +7,18 @@
 	5.一些工具类
 	以上库均已进行简单集成，也可脱离框架独立使用。
 	
+更新：
+	1.添加流式线性布局和竖型Viewpager。
+	2.添加最基础的注解绑定View功能。
+	
 Activity：FrameBaseActivity
 	使用时继承FrameBaseActivity。入口方法为onMyActivityCreated()。
 	使用replaceFragment()或者setMyContentView()来设置显示内容。
+	可使用注解形式替代findViewById：
+			@ViewInject(R.id.xxx)
+			private Button btn;
+					||
+			btn=(Button)findViewById(R.id.xxx);
 	
 	Toolbar：
 		使用Toolbar代替Actionbar。通过hideToolbar和showToolbar控制Toolbar的显示隐藏（默认显示），通过getToolbar获取Toolbar对象。Toolbar用法，自行百度。
@@ -27,7 +36,7 @@ Activity：FrameBaseActivity
 Fragment: FrameBaseFragment
 	使用时继承FragmentBaseFragment。入口方法为onMyFragmentCreate()。
 	使用setMyContentView()设置显示内容。replaceFragment()将会replace新的Fragment取代自己。
-	使用findViewById可以获取到内容中的组件。
+	使用findViewById或注解@ViewInject可以获取到内容中的组件。
 	
 	Toolbar：
 		要使用Toolbar，可使用context.getToolbar获取到对象。
