--- a/FrameProject/ReadMe
+++ b/FrameProject/ReadMe
@@ -15,6 +15,7 @@
 	3.封装了Webview，可使用WebViewType进行快速配置。
 	4.添加通用型ListView和GridView的Adapter——CommonAdapter，内部已集成ViewHolder重用。
 	5.添加button的background设置API兼容。
+	6.将框架部分更改成为Library，与demo分离。
 	
 Activity：FrameBaseActivity
 	使用时继承FrameBaseActivity。入口方法为onMyActivityCreated()。
