--- a/FrameProject/ReadMe
+++ b/FrameProject/ReadMe
@@ -5,9 +5,8 @@
 	3.android-async-http-1.4.8.jar（异步网络请求）
 	4.androidEventBus（事件订阅处理）
 	5.一些工具类
-	以上库均已进行简单集成，也可脱离框架独立使用。
 	
-该框架已整合成Library形式，添加项目依赖即可使用，更易进行集成。
+该框架已整合成Library形式，添加项目依赖即可使用，Library之外无需再导入eventbus和asynchttp的jar包，更易进行集成。
 	
 更新：
 	1.添加流式线性布局和竖型Viewpager。
@@ -16,6 +15,7 @@
 	4.添加通用型ListView和GridView的Adapter——CommonAdapter，内部已集成ViewHolder重用。
 	5.添加button的background设置API兼容。
 	6.将框架部分更改成为Library，与demo分离。
+	7.再封装asynchttp库。
 	
 Activity：FrameBaseActivity
 	使用时继承FrameBaseActivity。入口方法为onMyActivityCreated()。
@@ -35,10 +35,6 @@ Activity：FrameBaseActivity
 		使用initResideMenu()进行初始化设置并返回ResideMenu对象。也可使用getResideMenu()获得ResideMenu对象（如果之前未调用initResideMenu，那么将会进行默认初始化）。
 		侧滑菜单分为两部分：菜单头和菜单项。添加菜单头可以添加任意View，使用residemenu.addMenuHeader(View)方法添加；菜单项为ResideMenuItem对象，直接使用addMenuItemToMenu()或addMenuItemsToMenu()添加。
 		使用侧滑菜单后，默认界面的所有左右滑动会触发菜单开关，其他组件不能接受滑动事件。如果有滑动列表或其他需要接收滑动事件，则使用addIgnoredView()，将其添加。添加后，在该View上的滑动事件不会打开菜单。
-	
-	AndroidEventBus：
-		直接使用registerEventBus注册即可,注册后会自动在onDestroy中注销。
-		使用方法不同于EventBus，使用注解进行事件判定。详细使用请查阅资料。
 		
 Fragment: FrameBaseFragment
 	使用时继承FragmentBaseFragment。入口方法为onMyFragmentCreate()。
@@ -51,17 +47,19 @@ Fragment: FrameBaseFragment
 		需要在Fragment中改写Toolbar的菜单，要设置setHasOptionMenu(true)。
 		Toolbar的菜单，重写onCreateMyToolbarMenu和onMyToolbarMenuItemClicked。根据需要进行menu.clear()，不然会和activity的菜单进行叠加，一起显示。
 		
-	AndroidEventBus：
-		直接使用registerEventBus注册即可,注册后会自动在onDestroy中注销。
+AndroidEventBus：
+	在Activity或Fragment中直接使用registerEventBus或regiseterEventBusForSticky注册即可,注册后会自动在onDestroy中注销。
 
 
 常用工具类：
 	HttpUtils： 使用原生API进行http异步请求。
 	
-	AsyncHttpUtils:	简单再封装android-async-http库
+	AsyncHttpUtils:	完全再封装android-async-http库
 		使用doHttpRequestForXXXX的方法进行不同返回值的请求，具体查看该类源代码。
-		参数类RequestParams使用put(key,value)添加参数。也可添加对象类型参数。
-	
+		参数类FrameRequestParams继承自asynchttp库的RequestParmas类，使用put(key,value)添加参数。也可添加对象类型参数。
+		使用FrameHttpRspBytes，FrameHttpRspJson，FrameHttpRspString进行http请求回调。
+		回调方法onSuccess和onFailed中会有http状态码及其所表示的含义。
+		
 	LogUtils：	日志记录类
 		使用时，更改其中isDebug为true，TAG为所需标识。
 		LogUtils.d	LogUtils.i	LogUtils.e	LogUtils.v
