优化wifiUtils，添加wifi广播接收，添加对话框基础fragment

--- a/FrameProject/framelibrary/src/main/res/values/strings.xml
+++ b/FrameProject/framelibrary/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="dialog_ok">OK</string>
     <string name="dialog_cancel">Cancel</string>
     <string name="LOADING">Loading...</string>
+
+    <string name="dialog_btn_ok">OK</string>
+    <string name="dialog_btn_cancel">CANCEL</string>
 </resources>
